kustomize/overlays/test/kafka/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  template:
    spec:
      containers:
      - name: kafka-ui
        env:
        - name: SERVER_SERVLET_CONTEXT_PATH
          value: "/test/kafka"
