kustomize/overlays/test/kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: task-tracker-test
  annotations:
    # Используем регулярное выражение для корректного проксирования всех вложенных путей
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kafka(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-service
            port:
              number: 80
